--- a/src/styles/why.scss
+++ b/src/styles/why.scss
@@ -119,7 +119,7 @@
     font-size: 3rem;
     font-weight: 700;
     line-height: 1;
-    color: var(--color-border); // atténué : indicateur de rythme, pas élément central
+    color: var(--color-finding-index);
     user-select: none;
   }
 
